IF(BUILD_TESTING)
	SET(TestLua "test_lua")
	ADD_EXECUTABLE(${TestLua} test_lua.cpp)
	TARGET_LINK_LIBRARIES(${TestLua} ${LINK_LIBS} ${pbc})
	SET_TARGET_PROPERTIES(${TestLua} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")

	ADD_TEST( NAME ${TestLua}
		COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TestLua}
		WORKING_DIRECTORY  "${CMAKE_SOURCE_DIR}/bin/"
	)
ENDIF(BUILD_TESTING)
