#IF(BUILD_TESTING)
#	SET(TestLua "test_lua")
#	ADD_EXECUTABLE(${TestLua} test_lua.cpp)
#	TARGET_LINK_LIBRARIES(${TestLua} ${LINK_LIBS} ${pbc})
#	SET_TARGET_PROPERTIES(${TestLua} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
#
#	ADD_TEST( NAME ${TestLua}
#		COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TestLua}
#		WORKING_DIRECTORY  "${CMAKE_SOURCE_DIR}/bin/"
#	)
#ENDIF(BUILD_TESTING)

SET(CMAKE_FIND_LIBRARY_PREFIXES lib)

FUNCTION(build_test FILE MOREFILE)
	GET_FILENAME_COMPONENT(BASE "${FILE}" NAME_WE)
	GET_FILENAME_COMPONENT(EXT "${FILE}" EXT)

	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/third/protobuf/include/)

	LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/third/protobuf/lib/)

	ADD_EXECUTABLE("${BASE}" ${FILE} ${MOREFILE} main.cpp ${CMAKE_SOURCE_DIR}/bin/${BASE}.lua)

	SOURCE_GROUP("lua" FILES  ${CMAKE_SOURCE_DIR}/bin/${BASE}.lua)

	TARGET_LINK_LIBRARIES("${BASE}" ${LINK_LIBS} protobuf)
	
	SET_TARGET_PROPERTIES("${BASE}" PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")

	ADD_TEST(NAME "${BASE}"
		COMMAND "${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/${BASE}"
		WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/"
	)
ENDFUNCTION()

if(BUILD_TESTING)
	build_test("test_lua.cpp" "")
	build_test("test.cpp" "")
	#build_test("table.cpp")
	#build_test("lua_return.cpp")
endif()

