SET(pbc "pbc")
SET(PBC_DIR ${CMAKE_SOURCE_DIR}/pbc/)
FILE(GLOB PBCFILE ${PBC_DIR}/src/*.h ${PBC_DIR}/src/*.c ${CMAKE_SOURCE_DIR}/pbc/binding/lua53/pbc-lua53.c)
INCLUDE_DIRECTORIES(${PBC_DIR}/src/)
ADD_LIBRARY(${pbc} ${PBCFILE})

SET(Tool "tool")
INCLUDE_DIRECTORIES(./)
FILE(GLOB TOOLFILES *.cpp *.h *.hpp)

ADD_EXECUTABLE(${Tool} ${TOOLFILES} main.cpp)

TARGET_LINK_LIBRARIES(${Tool} ${LINK_LIBS})

SET_TARGET_PROPERTIES(${Tool} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")

