SET(pbc "pbc")
SET(PBC_DIR ${CMAKE_SOURCE_DIR}/pbc/)
FILE(GLOB PBCFILE ${PBC_DIR}/src/*.h ${PBC_DIR}/src/*.c ${CMAKE_SOURCE_DIR}/pbc/binding/lua53/pbc-lua53.c)
INCLUDE_DIRECTORIES(${PBC_DIR}/src/)
ADD_LIBRARY(${pbc} ${PBCFILE})

SET(Tool "tool")
INCLUDE_DIRECTORIES(./)

FILE(GLOB TOOLFILES *.cpp *.h *.hpp *.c)

ADD_EXECUTABLE(${Tool} ${TOOLFILES} main.cpp)

TARGET_LINK_LIBRARIES(${Tool} ${LINK_LIBS})

SET_TARGET_PROPERTIES(${Tool} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")

IF(BUILD_TESTING)
	ADD_CUSTOM_COMMAND(
		TARGET ${Tool}
		POST_BUILD
		COMMAND ${Tool}	  "./setting.xlsx" "test1.0.0.1" 1
		#COMMAND "${CMD}"
		WORKING_DIRECTORY 	${CMAKE_SOURCE_DIR}/bin/
		COMMENT  "run tool for export excel files"
	)
ENDIF(BUILD_TESTING)
