SET(pbc "pbc")
SET(PBC_DIR ${CMAKE_SOURCE_DIR}/pbc/)
FILE(GLOB PBCFILE ${PBC_DIR}/src/*.h ${PBC_DIR}/src/*.c ${CMAKE_SOURCE_DIR}/pbc/binding/lua53/pbc-lua53.c)
INCLUDE_DIRECTORIES(${PBC_DIR}/src/)
ADD_LIBRARY(${pbc} ${PBCFILE})

SET(Tool "tool")
INCLUDE_DIRECTORIES(./)

FILE(GLOB TOOLFILES *.cpp *.h *.hpp *.c)

FILE(GLOB EXCELFILES ${CMAKE_SOURCE_DIR}/bin/*.xlsx)

SOURCE_GROUP("excel" FILES ${EXCELFILES})

ADD_EXECUTABLE(${Tool} ${TOOLFILES} main.cpp ${EXCELFILES})

TARGET_LINK_LIBRARIES(${Tool} ${LINK_LIBS})

SET_TARGET_PROPERTIES(${Tool} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")

# update test tools 
IF(WIN32)
  SET(MODIFYTEST echo. >>${CMAKE_SOURCE_DIR}/test/CMakeLists.txt )
ELSE(WIN32)
  SET(MODIFYTEST touch ${CMAKE_SOURCE_DIR}/test/CMakeLists.txt -a)
ENDIF(WIN32)


SET(BUILD_TESTING OFF)
IF(BUILD_TESTING)
	ADD_CUSTOM_COMMAND(
		TARGET ${Tool}
		POST_BUILD
		COMMAND ${Tool}	  "./setting.xlsx" "test1.0.0.1" 1
		COMMAND ${MODIFYTEST}
		WORKING_DIRECTORY 	${CMAKE_SOURCE_DIR}/bin/
		COMMENT  "run tool for export excel files"
	)
ENDIF(BUILD_TESTING)

